Bug 112318 - Animations set to start 'With previous'/'After previous' don't work when OpenGL is enabled
Summary: Animations set to start 'With previous'/'After previous' don't work when Open...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.1.6.2 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Slide-Show VCL-OpenGL
  Show dependency treegraph
 
Reported: 2017-09-11 01:46 UTC by Aron Budea
Modified: 2019-04-16 10:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODP (11.04 KB, application/vnd.oasis.opendocument.presentation)
2017-09-11 01:46 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2017-09-11 01:46:57 UTC
Created attachment 136161 [details]
Sample ODP

Make sure the setting 'Use OpenGL for all rendering' is set in Tools -> Options...; LibreOffice -> View.
Open the attached presentation, which has a shape with an entrance animation (Venetian Blinds) set to start 'With previous' (it's the same with 'After previous').
Play slideshow.

=> Shape appears immediately, without animation.


Further observations:
- There is animation if start is set to 'On click'.
- There is animation if 'Use OpenGL for all rendering' is turned off.
- The issue is generic, other animations seem to be affected as well.

Reproduced using LO 5.4.1.2, 5.2.0.4 and 5.1.6.2 / Windows 7.
Not reproduced using LO 5.1.0.3 (there is a crash when the slideshow is finished, though).
=> regression

Since this depends on the VCL OpenGL setting, I'm adding it to that tracker.

Bibisected to the following commit using bibisect-win32-5.1, though it seems like the change just exposed the issue, and not caused it. Adding Cc: to Michael Meeks nevertheless.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=055f76b8f1897b79cc5f153da55e38b95ca551a2
author		Michael Meeks <michael.meeks@collabora.com>	2015-09-02 23:30:28 (GMT)
committer	Jan Holesovsky <kendy@collabora.com>	2015-09-03 09:37:33 (GMT)

"tdf#93870 - GL accel. via VCL canvas for presentations when GL enabled."
Comment 1 Miklos Vajna 2019-04-03 14:27:18 UTC
I'll take a look at this, let's see if I get anywhere.
Comment 2 Commit Notification 2019-04-05 09:33:56 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/3e0092031b73bad107e3122d5d4be2f5bd487744%5E%21

tdf#112318 sd opengl: fix lack of initial animation

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2019-04-08 14:20:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/62b309e5cf24570a242dbf41c53ece60b23292eb%5E%21

tdf#112318 sd opengl: fix lack of initial animation

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Aron Budea 2019-04-12 22:27:41 UTC
Verified fixed, thanks Miklos!

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 3fe3bd8a90d6dc53b05b9236185af3916fc5375d
CPU threads: 16; OS: Windows 6.1; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL